# OBP-Opey-II

./: .env.example  .gitignore  AI_SUMMARY_OF_OPEY.md  CONVERSATION_FIX.md  CORS_SETUP.md  Dockerfile  Dockerfile.populate-vectordb  IMPLEMENTATION_SUMMARY.md  README.md  STREAMING_REFACTOR.md  ai.md  ai_instructions.txt  docker-compose.yml  mcp_servers.example.json  pyproject.toml  pytest.ini  run_dev.sh  test_user_message_event.py
.github/instructions/: ai-instructions.md.instructions.md  ai.md.instructions.md
.github/workflows/: build_container_image.yml  build_populate_vectordb_container_image.yml
cli/: README.md  package.json
cli/source/: api.ts  app.tsx  cli.tsx  consent.ts  oauth.ts  roles.ts
cli/src/: api.js  app.js  index.js  oauth.js
docs/: ADMIN_CLIENT_SINGLETON.md  ANONYMOUS_SESSIONS.md  APPROVAL_KEY_CHANGES.md  APPROVAL_SYSTEM_COMPLETION.md  APPROVAL_SYSTEM_CONFIG_PATTERN.md  APPROVAL_SYSTEM_INTEGRATION.md  APPROVAL_SYSTEM_README.md  APPROVAL_SYSTEM_TESTING.md  APPROVAL_SYSTEM_USAGE.md  BATCH_APPROVAL_ARCHITECTURE.md  CORS_CONFIGURATION.md  DATABASE_AUTO_UPDATE.md  DEPRECATED_FILES.md  EVALUATION_QUICK_START.md  EXPERIMENTAL_EVALUATION.md  INTERRUPT_FLOW_FIX.md  MESSAGE_ID_SYNC.md  OBP_CHECKPOINT_ARCHITECTURE.md  REGENERATE_QUICK_START.md
scripts/: check_database_status.py  cli_client.py  demo_approval_system.py  demo_evaluation_system.py  run_retrieval_eval.py  run_with_debug.sh  see_the_src_database_folder_for_populate.txt  test_cors.py  test_e2e.sh
src/: run_client.py  run_eval.py  run_service.py  streamlit_app.py  test_anonymous_session.py  test_new_streaming.py  test_session.py  vectordb_setup.ipynb
src/agent/: __init__.py  agent_graph.py  agent_test_graph.py  graph_builder.py
src/agent/components/: cancellation_example.py  chains.py  edges.py  nodes.py  recovery.py  states.py  tools.py
src/agent/utils/: config.py  decorators.py  model_factory.py  obp.py  token_counter.py
src/auth/: __init__.py  admin_client.py  auth.py  schema.py  session.py  usage_tracker.py
src/auth/rate_limiting/: __init__.py  limiter.py
src/auth/session/: __init__.py  config.py  models.py
src/auth/usage_tracking/: models.py  tier_manager.py  user_tier_resolver.py
src/checkpointer/: entities.py  obp_checkpoint_saver.py
src/client/: __init__.py  agent_client.py  client.py  obp_client.py
src/database/: README.md  data_hash_manager.py  document_schemas.py  fix_chromadb_metadata.py  populate_vector_db.py  startup_updater.py  test_chroma_debug.py
src/evals/: README_evals.md  __init__.py  end-to-end-dataset-uploader.ipynb
src/evals/RAG/: README.md  eval_embedding_model.py
src/evals/datasets/: eval_dataset.json
src/evals/end_to_end/: dataset.py  evaluators.py
src/evals/opey/: Untitled.ipynb  (+1 more)
src/schema/: __init__.py  schema.py
src/scripts/: README.md  populate_chroma_db.py
src/service/: auth.py  checkpointer.py  checkpointer_registry.py  config.py  dependencies.py  lifecycle.py  mcp_tools_cache.py  opey_session.py  redis_client.py  service.py  status_probes.py  streaming.py  streaming_legacy.py
src/session/: manager.py
src/threads/: manager.py
src/utils/: cancellation_manager.py  obp_utils.py  resource-doc-loader.ipynb  resource_docs_validation_errors.txt  weaviate-vectordb.ipynb
templates/: user_consent.html
test/: conftest.py  test_correlation_id_implementation.py
test/agent/: test_approval_system.py
test/auth/: test_admin_client.py  test_auth.py
test/checkpointer/: conftest.py  test_entities.py  test_obp_checkpoint_saver.py
test/database/: test_auto_update.py
test/service/: test_auth.py  test_cancellation_manager.py  test_session_management.py
(+79 files in other folders)
