[tool.poetry]
name = "obp-opey-agent"
version = "0.1.0"
description = "An Agentic Bot for the OpenBankProject API"
authors = ["nemo <nemozak1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
langchain = "^0.3.7"
langchain-openai = "^0.2.5"
langchain-core = "^0.3.15"
pydantic = "^2.9.2"
langchain-chroma = "^0.1.4"
uuid = "^1.30"
fastapi = "^0.115.4"
langsmith = "^0.1.139"
langgraph = "^0.2.44"
langchain-anthropic = "^0.3.0"
langchain-ollama = "^0.2.0"
uvicorn = "^0.32.1"
langgraph-checkpoint-sqlite = "^2.0.1"
httpx = "^0.27.2"
langchain-community = "^0.3.9"
weaviate-client = "^4.10.2"
prance = "^23.6.21.0"
openapi-spec-validator = "^0.7.1"
swagger-spec-validator = "^3.0.4"
markdownify = "^0.14.1"
prettytable = "^3.12.0"
simsimd = "^6.2.1"
langchain-weaviate = {git = "https://github.com/langchain-ai/langchain-weaviate.git", rev = "main", subdirectory = "libs/weaviate"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
