[tool.poetry]
name = "obp-opey-agent"
version = "0.1.0"
description = "An Agentic Bot for the OpenBankProject API"
authors = ["nemo <nemozak1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
langchain = "^0.3.7"
langchain-openai = "^0.3.6"
langchain-core = "^0.3.15"
pydantic = "^2.9.2"
langchain-chroma = "^0.1.4"
uuid = "^1.30"
fastapi = "^0.115.4"
langsmith = {extras = ["pytest"], version = "^0.3.23"}
langgraph = "^0.2.44"
protobuf = "3.20.*"
langchain-anthropic = "^0.3.0"
langchain-ollama = "^0.2.0"
weaviate = "^0.1.2"
uvicorn = "^0.32.1"
langgraph-checkpoint-sqlite = "^2.0.1"
httpx = "^0.27.2"
langchain-community = "^0.3.9"
pyjwt = "^2.10.1"
fastapi-sessions = "^0.3.2"
anyio = "^4.9.0"
asgi-lifespan = "^2.1.0"
redis = "^6.2.0"
graphviz = "^0.21"
mermaid-py = "^0.8.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-dependency = "^0.6.0"
openevals = "^0.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"