[tool.poetry]
name = "obp-opey-agent"
version = "0.1.0"
description = "An Agentic Bot for the OpenBankProject API"
authors = ["nemo <nemozak1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
streamlit = "^1.39.0"
langchain = "^1.0.0"
langchain-openai = "^0.3.6"
langchain-core = "^1.0.0"
pydantic = "^2.9.2"
uuid = "^1.30"
fastapi = "^0.115.4"
langsmith = {extras = ["pytest"], version = "^0.3.23"}
protobuf = "3.20.*"
langchain-anthropic = "^0.3.0"
langchain-ollama = "^0.3.0"
weaviate = "^0.1.2"
uvicorn = "^0.35.0"
langgraph-checkpoint-sqlite = "^2.0.1"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
fastapi-sessions = "^0.3.2"
anyio = "^4.9.0"
asgi-lifespan = "^2.1.0"
redis = "^6.2.0"
graphviz = "^0.21"
mermaid-py = "^0.8.0"
slowapi = "^0.1.9"
matplotlib = "^3.10.7"
langchain-mcp-adapters = "^0.2.1"
aiohttp = "^3.13.2"
langchain-chroma = "^1.1.0"
fastmcp = "^2.14.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-dependency = "^0.6.0"
pandas = "^2.2.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"